# Taller-de-Programacion

./: README.md
tp_grupal/: Cargo.toml  README.md  ejecutar_para_testing.sh  levantar_servidor.sh  testing_release.sh  users.info
tp_grupal/archivos_test/config/: peer1.conf  peer2.conf  peer3.conf  servidor.conf
tp_grupal/src/: config_room_rtc.rs  config_servidor.rs  lib.rs  logger.rs  utils_config.rs
tp_grupal/src/aplicacion/: mod.rs
tp_grupal/src/comunicacion/: comunicador.rs  comunicador_fake.rs  comunicador_fake_y_mock.rs  comunicador_mock.rs  comunicador_stub.rs  comunicador_tcp.rs  lobby.rs  mod.rs  telefono.rs  telefono_dummy.rs  telefono_mock.rs  telefono_stub.rs
tp_grupal/src/creacion_llamada/: creador_de_conexion_encriptada.rs  creador_de_conexion_mock.rs  mediador_de_conexiones.rs  mod.rs
tp_grupal/src/encriptacion/: error.rs  mock_socket.rs  mod.rs  test.rs
tp_grupal/src/entrada/: mod.rs
tp_grupal/src/llamada/: administrador_de_camaras.rs  camara.rs  camara_mock.rs  creador_lente.rs  creador_lente_nokwha.rs  lente.rs  lente_nokwha.rs  llamada_mock.rs  microfono.rs  microfono_default.rs  mod.rs  panel_estadisticas.rs  sesion_rtp.rs
tp_grupal/src/protocolos/: mod.rs
tp_grupal/src/reproductor/: mod.rs  reproductor_audio.rs  reproductor_audio_default.rs  reproductor_mock.rs  reproductor_rtp.rs  reproductor_sin_decoder.rs
tp_grupal/src/rtc/: logs.rs  mod.rs  rtc_peer_connection.rs
tp_grupal/src/seguridad/: mod.rs
tp_grupal/src/servidor_utils/: mod.rs  persistencia.rs  registro_usuarios.rs
tp_grupal/tests/: ingreso.rs
(+127 files in other folders)
